--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.11.1"
   },
   "devDependencies": {
+    "bower": "^1.3.12",
     "govuk_frontend_toolkit": "^3.1.0",
     "grunt": "^0.4.5",
     "grunt-concurrent": "^1.0.0",
